# nitric-examples

v1/llama-rag/: .env  .gitignore  model.dockerfile  model_utilities.py  nitric.dev.yaml  nitric.yaml  pyproject.toml  python.dockerfile
v1/llama-rag/common/: model_parameters.py  resources.py
v1/llama-rag/services/: chat.py  subscriber.py
