[project]
name = "llama-rag"
version = "0.1.0"
description = "Use Retrieval Augmented Generation (RAG) with a Llama 3.2 model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nitric ==1.2.3",
    "betterproto ==2.0.0b6",
]

[project.optional-dependencies]
ml = [
    "llama-index>=0.12.6",
    "llama-index-embeddings-huggingface>=0.4.0",
    "llama-index-llms-llama-cpp>=0.3.0",
]

[tool.uv]
dev-dependencies = [
    "watchdog>=5.0.3",
]
